# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2021-10-23 Michael Truog   <mjtruog at protonmail dot com>

    * Force all service name and service name patterns to be
      byte strings (in UTF8) to reduce cpg/trie memory usage
        * Previously external services already had this limitation,
          now it applies to internal services and configuration parameters
    * Reduce memory use in the external service Erlang process
    * Update trie

2021-10-16 Michael Truog   <mjtruog at protonmail dot com>

    * Add the async argument to cloudi_service_send for
      turning off response-handling features

2021-10-15 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_api_batch:queue_clear and
      cloudi_service_api_batch:services_restart usage when
      queue_dependencies configuration prevents queue execution

2021-09-10 Michael Truog   <mjtruog at protonmail dot com>

    * Fix CloudI Service API nodes_set discovery ec2
      environment variable substitution
    * Fix README integration-tests configure information

2021-09-02 Michael Truog   <mjtruog at protonmail dot com>

    * Add build_cloudi_version to the CloudI Service API
      code_status output for the current git commit hash
      (releases will have the same value as runtime_cloudi_version)
    * Update jinterface

2021-08-30 Michael Truog   <mjtruog at protonmail dot com>

    * Add boost::stacktrace support for the C++ CloudI API as a
      cross-platform dependency to use instead of booster
      (backward-cpp is still preferred on Linux)
    * Update README dependency package information

2021-08-27 Michael Truog   <mjtruog at protonmail dot com>

    * Improve C/C++ CloudI API backtrace configure check

2021-08-26 Michael Truog   <mjtruog at protonmail dot com>

    * Add the validate_response argument to
      cloudi_service_cron and cloudi_service_send for more
      explicit validation that is configurable