@@ -3,6 +3,12 @@
 
 2021-10-23 Michael Truog   <mjtruog at protonmail dot com>
 
+    * Fix the service configuration options
+      aspects_suspend and aspects_resume so the aspect function
+      execution is delayed until the current service request is done
+      (if the service is resumed before the current service request
+       is done, neither the aspects_suspend functions or
+       the aspects_resume functions will execute)
     * Force all service name and service name patterns to be
       byte strings (in UTF8) to reduce cpg/trie memory usage
         * Previously external services already had this limitation,
